--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,29 +1,3 @@
-li {
-  list-style-type: none;
-}
-
-input {
-  display: inline;
-  width: 1.5em;
-  height: 1.5em;
-}
-
-label {
-  font-size: 1.5em;
-  width: 12em;
-  justify-content: center;
-  border: 1px solid black;
-}
-
-.labelCont {
-  border: 2px solid black;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
 .App {
   text-align: center;
 }
@@ -66,4 +40,49 @@ label {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* TESTING CSS (TEMP)  */
+li {
+  list-style-type: none;
+}
+
+input {
+  width: 1em;
+  height: 1em;
+  vertical-align: text-bottom;
+}
+
+label {
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+  font-size: 1.5em;
+  width: 12em;
+  height: 1.25em;
+  align-items: center;
+  justify-content: center;
+  /* border: 2px solid black; */
+}
+
+code {
+  margin-left: 0.25em;
+}
+
+.labelCont {
+  border: 0.5em solid #282c34;
+  min-height: 20em;
+  min-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  align-content: flex-start;
+}
+
+.filter-title {
+  background-color: #282c34;
+  color: white;
+  margin: 0;
+  padding-left: 0.25em;
 }
