--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,7 @@
+html,body{
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
@@ -68,6 +72,9 @@ code {
 
 .label-container,.issue-container{
   border: 0.5em solid #282c34;
+}
+
+.label-container{
   min-height: 40vh;
 }
 
